<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="vertical">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:padding="5dp">
        <CheckBox android:id="@+id/volumekeys_used_checkbox"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:text="@string/volumekeys_used_checkbox_text"
                  android:textSize="15sp"
                  android:onClick="onButtonClicked" />
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:layout_margin="5dp"
              android:background="@android:color/darker_gray" />
        <TextView android:id="@+id/screen_locked_label"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/screen_locked_label_text"
                  android:textSize="15sp" />
        <CheckBox android:id="@+id/screen_on_checkbox"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/screen_on_checkbox_text"
                  android:textSize="15sp"
                  android:onClick="onButtonClicked" />
        <CheckBox android:id="@+id/lock_exit_checkbox"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/lock_exit_checkbox_text"
                  android:textSize="15sp"
                  android:onClick="onButtonClicked" />
        <CheckBox android:id="@+id/lock_back_checkbox"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/lock_back_checkbox_text"
                  android:textSize="15sp"
                  android:onClick="onButtonClicked" />
        <CheckBox android:id="@+id/lock_menu_checkbox"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/lock_menu_checkbox_text"
                  android:textSize="15sp"
                  android:onClick="onButtonClicked" />
        <CheckBox android:id="@+id/lock_volume_checkbox"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/lock_volume_checkbox_text"
                  android:textSize="15sp"
                  android:onClick="onButtonClicked" />
        <CheckBox android:id="@+id/hide_statusbar_checkbox"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/hide_statusbar_checkbox_text"
                  android:textSize="15sp"
                  android:onClick="onButtonClicked" />
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:layout_margin="5dp"
              android:background="@android:color/darker_gray" />
        <CheckBox android:id="@+id/show_notification_checkbox"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:text="@string/show_notification_checkbox_text"
                  android:textSize="15sp"
                  android:onClick="onButtonClicked" />
        <RadioGroup android:id="@+id/notification_click_radio"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">
            <TextView android:id="@+id/notification_click_label"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/notification_click_label_text"
                      android:textSize="15sp" />
            <RadioButton android:id="@+id/notification_click_resume_radio"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/notification_resume_radio_text"
                         android:textSize="15sp"
                         android:onClick="onButtonClicked" />
            <RadioButton android:id="@+id/notification_click_finish_radio"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/notification_finish_radio_text"
                         android:textSize="15sp"
                         android:onClick="onButtonClicked" />
            <RadioButton android:id="@+id/notification_click_nothing_radio"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/notification_nothing_radio_text"
                         android:textSize="15sp"
                         android:onClick="onButtonClicked" />
        </RadioGroup>
        <RadioGroup android:id="@+id/notification_cancel_radio"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical">
            <TextView android:id="@+id/notification_cancel_label"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/notification_cancel_label_text"
                      android:textSize="15sp" />
            <RadioButton android:id="@+id/notification_cancel_resume_radio"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/notification_resume_radio_text"
                         android:textSize="15sp"
                         android:onClick="onButtonClicked" />
            <RadioButton android:id="@+id/notification_cancel_finish_radio"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/notification_finish_radio_text"
                         android:textSize="15sp"
                         android:onClick="onButtonClicked" />
            <RadioButton android:id="@+id/notification_cancel_nothing_radio"
                         android:layout_width="fill_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/notification_nothing_radio_text"
                         android:textSize="15sp"
                         android:onClick="onButtonClicked" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>