<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/about_scrollview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="vertical">
    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:padding="5dp">
        <TextView android:id="@+id/app_description_link"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:text="@string/app_description_link_text"
                  android:textSize="20sp"
                  android:textColor="@color/inner_link_blue"
                  android:clickable="true"
                  android:onClick="onLinkClicked" />
        <TextView android:id="@+id/app_features_link"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:text="@string/app_features_link_text"
                  android:textSize="20sp"
                  android:textColor="@color/inner_link_blue"
                  android:clickable="true"
                  android:onClick="onLinkClicked" />
        <TextView android:id="@+id/app_permissions_link"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:text="@string/app_permissions_link_text"
                  android:textSize="20sp"
                  android:textColor="@color/inner_link_blue"
                  android:clickable="true"
                  android:onClick="onLinkClicked" />
        <TextView android:id="@+id/source_code_link"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:text="@string/source_code_link_text"
                  android:textSize="20sp"
                  android:textColor="@color/inner_link_blue"
                  android:clickable="true"
                  android:onClick="onLinkClicked" />
        <TextView android:id="@+id/app_license_link"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:text="@string/app_license_link_text"
                  android:textSize="20sp"
                  android:textColor="@color/inner_link_blue"
                  android:clickable="true"
                  android:onClick="onLinkClicked" />
        <TextView android:id="@+id/liability_disclaimer_link"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:text="@string/liability_disclaimer_link_text"
                  android:textSize="20sp"
                  android:textColor="@color/inner_link_blue"
                  android:clickable="true"
                  android:onClick="onLinkClicked" />
        <TextView android:id="@+id/additional_licenses_link"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:text="@string/additional_licenses_link_text"
                  android:textSize="20sp"
                  android:textColor="@color/inner_link_blue"
                  android:clickable="true"
                  android:onClick="onLinkClicked" />
        <TextView android:id="@+id/third_party_software_link"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center_horizontal"
                  android:text="@string/third_party_software_link_text"
                  android:textSize="20sp"
                  android:textColor="@color/inner_link_blue"
                  android:clickable="true"
                  android:onClick="onLinkClicked" />
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:layout_margin="5dp"
              android:background="@android:color/darker_gray" />
        <TextView android:id="@+id/app_description_label"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:text="@string/app_description_label_text"
                  android:textSize="15sp" />
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:layout_margin="5dp"
              android:background="@android:color/darker_gray" />
        <TextView android:id="@+id/app_features_label"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:text="@string/app_features_label_text"
                  android:textSize="15sp" />
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:layout_margin="5dp"
              android:background="@android:color/darker_gray" />
        <TextView android:id="@+id/app_permissions_label"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:text="@string/app_permissions_label_text"
                  android:textSize="15sp" />
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:layout_margin="5dp"
              android:background="@android:color/darker_gray" />
        <TextView android:id="@+id/source_code_label"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:text="@string/source_code_label_text"
                  android:textSize="15sp"
                  android:autoLink="web" />
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:layout_margin="5dp"
              android:background="@android:color/darker_gray" />
        <TextView android:id="@+id/app_license_label"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:text="@string/app_license_label_text"
                  android:textSize="15sp"
                  android:autoLink="web" />
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:layout_margin="5dp"
              android:background="@android:color/darker_gray" />
        <TextView android:id="@+id/liability_disclaimer_label"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:text="@string/liability_disclaimer_label_text"
                  android:textSize="15sp" />
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:layout_margin="5dp"
              android:background="@android:color/darker_gray" />
        <TextView android:id="@+id/additional_licenses_label"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:text="@string/additional_licenses_label_text"
                  android:textSize="15sp" />
        <View android:layout_width="fill_parent"
              android:layout_height="1dp"
              android:layout_margin="5dp"
              android:background="@android:color/darker_gray" />
        <TextView android:id="@+id/third_party_software_label"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:layout_margin="5dp"
                  android:text="@string/third_party_software_label_text"
                  android:textSize="15sp"
                  android:autoLink="web" />
    </LinearLayout>
</ScrollView>